# PolicyMesh

./: .env  .env.dev.example  .env.example  .gitignore  .gitiignore  .pre-commit-config.yaml  DECISIONS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d4a2ca31ff4a_create_rbac_models.py
app/: main.py
app/api/: deps.py
app/api/v1/: admin.py  auth.py  mock.py  users.py
app/core/: config.py  exceptions.py  logging.py
app/db/: seed.py  session.py
app/middleware/: authentication.py
app/models/: base.py  rbac.py  users.py
app/schemas/: auth.py  rbac.py  user.py
app/services/: auth_ops.py  permission_ops.py
docker/: docker-compose-dev.yml
docker/backend/: .dockerignore  Dockerfile  entrypoint.sh  gunicorn_conf.py
docs-diagrams/: README.md
docs-diagrams/diagrams/: rbac-er-diagram.mmd  rbac-sequence-diagram.mmd
